--- a/AnywhereFitnessUnit2Build/AnywhereFitnessUnit2Build/Storyboard/Base.lproj/TrainerHome~.storyboard
+++ b/AnywhereFitnessUnit2Build/AnywhereFitnessUnit2Build/Storyboard/Base.lproj/TrainerHome~.storyboard
@@ -79,6 +79,77 @@
             </objects>
             <point key="canvasLocation" x="-423.1884057971015" y="632.8125"/>
         </scene>
+        <!--Trainer View Controller-->
+        <scene sceneID="0xq-cl-IEO">
+            <objects>
+                <viewController id="SxF-fI-Uw1" customClass="TrainerViewController" customModule="AnywhereFitnessUnit2Build" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gwi-xb-jW3">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="g4Q-70-fAx">
+                                <rect key="frame" x="40" y="169" width="334" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TrainerCell" id="ahx-E8-V7w">
+                                        <rect key="frame" x="0.0" y="28" width="334" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ahx-E8-V7w" id="l7V-K0-4Ba">
+                                            <rect key="frame" x="0.0" y="0.0" width="334" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="g2C-rh-aIw" kind="presentation" identifier="TrainerClassDetailModalSegue" id="OjE-Re-Pub"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome back!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f6e-xW-TFZ">
+                                <rect key="frame" x="40" y="101" width="334" height="28"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VPi-3q-X6n">
+                                <rect key="frame" x="40" y="760" width="334" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="hDq-gi-mdQ"/>
+                                </constraints>
+                                <state key="normal" title="CreateAClassPack"/>
+                                <connections>
+                                    <action selector="createAClasssButtonTapped:" destination="SxF-fI-Uw1" eventType="touchUpInside" id="IFV-0x-sTd"/>
+                                    <action selector="searchForAClassButtonTapped:" destination="SxF-fI-Uw1" eventType="touchUpInside" id="5TI-PH-Ej3"/>
+                                    <segue destination="g2C-rh-aIw" kind="presentation" identifier="TrainerCreateClassModalSegue" id="PLO-aO-UOd"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="VPi-3q-X6n" firstAttribute="top" secondItem="g4Q-70-fAx" secondAttribute="bottom" constant="55" id="1rV-OO-oZ6"/>
+                            <constraint firstItem="7UJ-ea-uXG" firstAttribute="bottom" secondItem="VPi-3q-X6n" secondAttribute="bottom" constant="52" id="5ys-QH-SXG"/>
+                            <constraint firstItem="7UJ-ea-uXG" firstAttribute="trailing" secondItem="g4Q-70-fAx" secondAttribute="trailing" constant="40" id="71K-0i-qRX"/>
+                            <constraint firstItem="7UJ-ea-uXG" firstAttribute="trailing" secondItem="VPi-3q-X6n" secondAttribute="trailing" constant="40" id="PgQ-SJ-5Xp"/>
+                            <constraint firstItem="f6e-xW-TFZ" firstAttribute="leading" secondItem="7UJ-ea-uXG" secondAttribute="leading" constant="40" id="ZM7-K5-vTw"/>
+                            <constraint firstItem="g4Q-70-fAx" firstAttribute="leading" secondItem="7UJ-ea-uXG" secondAttribute="leading" constant="40" id="g3a-nr-fHf"/>
+                            <constraint firstItem="f6e-xW-TFZ" firstAttribute="top" secondItem="7UJ-ea-uXG" secondAttribute="top" constant="57" id="gFM-9y-1m7"/>
+                            <constraint firstItem="7UJ-ea-uXG" firstAttribute="trailing" secondItem="f6e-xW-TFZ" secondAttribute="trailing" constant="40" id="gf9-OM-UAQ"/>
+                            <constraint firstItem="g4Q-70-fAx" firstAttribute="top" secondItem="f6e-xW-TFZ" secondAttribute="bottom" constant="40" id="imx-hA-udg"/>
+                            <constraint firstItem="VPi-3q-X6n" firstAttribute="leading" secondItem="7UJ-ea-uXG" secondAttribute="leading" constant="40" id="sME-6J-0pd"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="7UJ-ea-uXG"/>
+                    </view>
+                    <connections>
+                        <outlet property="createAClassButton" destination="VPi-3q-X6n" id="qr9-np-9x1"/>
+                        <outlet property="searchForAClassButton" destination="VPi-3q-X6n" id="48P-8y-MOk"/>
+                        <outlet property="tableView" destination="g4Q-70-fAx" id="Lxb-hj-fwg"/>
+                        <outlet property="welcomeLabel" destination="f6e-xW-TFZ" id="sjJ-11-tZp"/>
+                        <segue destination="1em-Rd-9zX" kind="presentation" identifier="TrainerLoginModalSegue" id="qKX-zf-Wv0"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="N3o-Uj-90k" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-423" y="1330"/>
+        </scene>
         <!--Login-->
         <scene sceneID="nlv-v5-Mjd">
             <objects>
@@ -109,7 +180,11 @@
                 <viewControllerPlaceholder storyboardName="TrainerClassDetail" id="g2C-rh-aIw" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xP7-P8-YAg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="180" y="1114"/>
+            <point key="canvasLocation" x="208" y="1347"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="PLO-aO-UOd"/>
+        <segue reference="qKX-zf-Wv0"/>
+    </inferredMetricsTieBreakers>
 </document>
